# Justin-Agent

./: .env.example  .gitignore  README.md  RELEASE_v0.1.0.md  RELEASE_v0.2.0.md  pyproject.toml  test_fetch.py  test_prompt.py  test_pt.py  test_setup.py  test_sweeper.py  test_wechat.py
.githooks/: pre-commit
justin/: __init__.py  cli.py  config.py  context.py  extensions.py  extractor.py  models.py  runtime.py  search.py  server.py  skills.py  storage.py  tools.py  types.py  wechat.py
justin/web/: app.css  app.js  index.html
personal_agent/: __init__.py  cli.py  config.py  embeddings.py  extractor.py  runtime.py  server.py  types.py
personal_agent/web/: index.html
scripts/: check_secrets.py
tests/: test_cli.py  test_models.py  test_runtime.py  test_server.py  test_storage.py  test_wechat_gateway.py
