[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-agent"
version = "0.1.0"
description = "A local-first personal agent with memory review, retrieval, CLI, and Web UI."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Codex" }]
dependencies = []

[project.scripts]
personal-agent = "personal_agent.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
personal_agent = ["web/*"]
