[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "justin-agent"
version = "0.1.0"
description = "Justin: a local-first agent with memory review, retrieval, CLI, and Web UI."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Codex" }]
dependencies = [
  "rich>=13.7.0",
]

[project.scripts]
Justin = "justin.cli:main"
justin = "justin.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
justin = ["web/*"]
